// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SearchCardConnected component should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "bottom": 0,
            "flex": 1,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          blurRadius={80}
          fadeDuration={250}
          onLoad={[Function]}
          source={
            Array [
              Object {
                "__typename": "ImageMediaSource",
                "cache": "force-cache",
                "uri": "https://res.cloudinary.com/apollos/image/fetch/c_limit,f_auto,w_1600/https://apollosrock.newspring.cc/GetImage.ashx%3Fguid%3Dd3a96243-2558-4c04-bf41-3aadcf41771f",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          material="regular"
          style={
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "bottom": 0,
              "flex": 1,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "__typename": "ImageMediaSource",
              "cache": "force-cache",
              "uri": "https://res.cloudinary.com/apollos/image/fetch/c_limit,f_auto,w_1600/https://apollosrock.newspring.cc/GetImage.ashx%3Fguid%3Dd3a96243-2558-4c04-bf41-3aadcf41771f",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            How to lead people to Jesus
          </Text>
        </Text>
        <Text
          bold={false}
          italic={false}
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
              }
            }
          >
            Love compels a mother to lose all dignity in public as she screams the name of her lost child.
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`The SearchCardConnected component should render without image 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Black",
              "fontSize": 24,
              "lineHeight": 27.6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#27272E",
              }
            }
          >
            How to lead people to Jesus
          </Text>
        </Text>
        <Text
          bold={false}
          italic={false}
          numberOfLines={3}
          style={
            Object {
              "color": "#27272E",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
              }
            }
          >
            Love compels a mother to lose all dignity in public as she screams the name of her lost child.
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
